# godot-bevy

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EXAMPLE_USAGE.md  README.md  bacon.toml  baseline.json  devenv.nix  devenv.yaml  justfile  pyproject.toml
book/: book.toml
book-tests/: Cargo.toml
book-tests/src/: plugins.rs
examples/avian-physics-demo/rust/: Cargo.toml  output.tracy
examples/avian-physics-demo/rust/src/: api.rs  lib.rs
examples/boids-perf-test/rust/: Cargo.toml
examples/boids-perf-test/rust/src/: bevy_boids.rs  container.rs  lib.rs
examples/dodge-the-creeps-2d/rust/: Cargo.toml
examples/dodge-the-creeps-2d/rust/src/: commands.rs  lib.rs  macros.rs  main_menu.rs
examples/dodge-the-creeps-2d/rust/src/gameplay/: audio.rs  countdown.rs  gameover.rs  mob.rs  mod.rs  player.rs  score.rs
examples/dodge-the-creeps-2d/rust/src/nodes/: player.rs
examples/godot-node-children-as-bevy-components-demo/rust/: Cargo.toml
examples/godot-node-children-as-bevy-components-demo/rust/src/: lib.rs
examples/input-event-demo/rust/: Cargo.toml
examples/input-event-demo/rust/src/: bevy_enhanced_input.rs  bevy_input.rs  godot_input.rs  leafwing_input.rs  lib.rs
examples/platformer-2d/rust/: Cargo.toml
examples/platformer-2d/rust/src/: components.rs  level_manager.rs  lib.rs  main_menu.rs  scene_management.rs
examples/platformer-2d/rust/src/gameplay/: audio.rs  door.rs  gem.rs  hud.rs  mod.rs  player.rs
examples/simple-node2d-movement/rust/: Cargo.toml
examples/simple-node2d-movement/rust/src/: lib.rs
examples/timing-test/rust/: Cargo.toml
examples/timing-test/rust/src/: lib.rs
examples/two-way-sync-demo/rust/: Cargo.toml
examples/two-way-sync-demo/rust/src/: lib.rs
examples/web-demo/rust/: Cargo.toml
examples/web-demo/rust/src/: lib.rs
godot-bevy/: Cargo.toml  run_benchmarks.sh
godot-bevy-inspector/: Cargo.toml
godot-bevy-inspector/src/: lib.rs  plugin.rs
godot-bevy-inspector/src/options/: mod.rs  number.rs  quat.rs
godot-bevy-inspector/src/panels/: hierarchy.rs  inspector.rs  mod.rs  world.rs
godot-bevy-inspector/src/reflect/: inspector_ui.rs  mod.rs  type_impls.rs
godot-bevy-inspector/src/widgets/: compound.rs  containers.rs  mod.rs  primitives.rs
godot-bevy-macros/: Cargo.toml
godot-bevy-macros/src/: bevy_attr.rs  bevy_bundle.rs  component_as_godot_node.rs  emit.rs  godot_node_bundle.rs  lib.rs  node_tree_view.rs
godot-bevy-macros/src/godot_node/: attr.rs  bundle.rs  component.rs  components_attr.rs  mod.rs
godot-bevy-test/: Cargo.toml  README.md
godot-bevy-test-macros/: Cargo.toml
godot-bevy-test-macros/src/: lib.rs
godot-bevy-test/src/: bencher.rs  exit_code.rs  lib.rs  runner.rs  test_app.rs  test_helpers.rs
godot-bevy/benches/: transform_conversions.rs  transform_read_split.rs
godot-bevy/src/: app.rs  auto_sync.rs  autosync.rs  lib.rs  node_registry.rs  node_tree_view.rs  prelude.rs  profiling.rs
godot-bevy/src/bridge/: godot_node_handle.rs  godot_ref.rs  godot_resource_handle.rs
godot-bevy/src/interop/: godot_access.rs  godot_node_handle.rs  mod.rs  node_markers.rs  signal_names.rs
godot-bevy/src/interop/node_markers/: node_markers4_2.rs  node_markers4_2_2.rs  node_markers4_3.rs  node_markers4_4.rs  node_markers4_5.rs  node_markers4_6.rs
godot-bevy/src/interop/signal_names/: signal_names4_2.rs  signal_names4_2_1.rs  signal_names4_2_2.rs  signal_names4_3.rs  signal_names4_4.rs  signal_names4_5.rs  signal_names4_6.rs
godot-bevy/src/plugins/: assets.rs  audio.rs  bevy_input_bridge.rs  collisions.rs  core.rs  debugger.rs  event_bridge.rs  fixed_schedule.rs  godot_bevy_logger.rs  input.rs  input_event.rs  mailbox.rs  mod.rs  packed_scene.rs  reflection.rs  scene_tree.rs  signals.rs  transforms.rs
godot-bevy/src/plugins/audio/: channel.rs  command.rs  mod.rs  output.rs  player.rs  plugin.rs  settings.rs  tween.rs
godot-bevy/src/plugins/component_as_godot_node_child/: mod.rs  plugin.rs
godot-bevy/src/plugins/core/: bevy_input_bridge.rs  collisions.rs  input_event.rs  mod.rs  node_markers.rs  scene_tree.rs  signals.rs  transforms.rs
godot-bevy/src/plugins/input/: actions.rs  events.rs  input_bridge.rs  mod.rs
godot-bevy/src/plugins/inspector/: assets.rs  entities.rs  mod.rs  resources.rs  ui.rs  utils.rs  world.rs
godot-bevy/src/plugins/scene_tree/: autosync.rs  mod.rs  node_type_checking.rs  node_type_checking_generated.rs  plugin.rs  relationship.rs
godot-bevy/src/plugins/scene_tree/node_type_checking/: type_checking4_2.rs  type_checking4_2_1.rs  type_checking4_3.rs  (+3 more)
godot-bevy/src/plugins/transforms/: change_filter.rs  config.rs  conversions.rs  custom_sync.rs  macros.rs  math.rs  mod.rs  plugin.rs  sync_systems.rs  tests.rs
godot-bevy/src/tests/: mod.rs  reflect_tests.rs  scene_tree_relationship_tests.rs  schedule_tests.rs  transform_multistep_tests.rs
godot-bevy/src/utils/: debug.rs  math.rs  mod.rs  profiling.rs  scene_tree.rs
godot-bevy/src/watchers/: collision_watcher.rs  input_watcher.rs  mod.rs  scene_tree_watcher.rs  signal_watcher.rs
godot-bevy/tests/: bevy_godot_integration_tests.rs  frame_sync_test.rs  full_integration_transform_tests.rs  scene_tree_test.rs  signals_test.rs  simple_transform_sync_tests.rs  transforms_test.rs
godot-bevy/tests/scene_tree/: parent_mapping.rs
godot-bevy/tests/transforms/: basic_sync.rs  hierarchy.rs  hierarchy_sync.rs  mod.rs  scene_tree_integration.rs  sync_modes.rs  transform_initialization.rs  two_way_sync.rs
itest/rust/: Cargo.toml  run_godot.rs
itest/rust/macros/: Cargo.toml
itest/rust/macros/src/: lib.rs
itest/rust/src/: asset_reader_tests.rs  autosync_match_tests.rs  autosync_tests.rs  benchmarks.rs  collision_tests.rs  event_bridge_tests.rs  godot_components_tests.rs  input_ecosystem_tests.rs  input_tests.rs  internal_benchmarks.rs  lib.rs  macro_redesign_tests.rs  pause_tests.rs  real_frame_tests.rs  scene_tree_tests.rs  scene_tree_watcher_init_tests.rs  signal_tests.rs  time_scale_tests.rs  transform_sync_tests.rs
itest/rust/src/framework/: bencher.rs  mod.rs  mod.rs.bak  test_app.rs  test_helpers.rs
(+263 files in other folders)
