[workspace.package]
version = "0.9.2"
edition = "2024"
authors = ["David Chavez <david@dcvz.io>"]
repository = "https://github.com/bytemeadow/godot-bevy"
keywords = ["godot", "game", "engine", "gamedev", "graphics"]
categories = ["game-engines"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
  "godot-bevy",
  "godot-bevy-macros",
  "itest/rust",
  # NOTE: avian-physics-demo excluded - needs avian3d 0.5 and bevy_asset_loader stable 0.24
  # "examples/avian-physics-demo/rust",
  "examples/dodge-the-creeps-2d/rust",
  "examples/timing-test/rust",
  # NOTE: input-event-demo excluded - needs bevy_enhanced_input and leafwing-input-manager 0.17 support
  # "examples/input-event-demo/rust",
  "examples/platformer-2d/rust",
  "examples/simple-node2d-movement/rust",
  "examples/perf-test/rust",
  "examples/two-way-sync-demo/rust",
]
resolver = "2"

[workspace.dependencies]
godot = { version = "0.4.1", features = ["experimental-threads"] }
godot-bevy-macros = { version = "0.9.2", path = "godot-bevy-macros" }
