[workspace.package]
version = "0.9.2"
edition = "2024"
authors = ["David Chavez <david@dcvz.io>"]
repository = "https://github.com/bytemeadow/godot-bevy"
keywords = ["godot", "game", "engine", "gamedev", "graphics"]
categories = ["game-engines"]
license = "MIT OR Apache-2.0"

[workspace]
members = [
    "godot-bevy",
    "godot-bevy-macros",
    "godot-bevy-test",
    "godot-bevy-test-macros",
    "itest/rust",
    "examples/avian-physics-demo/rust",
    "examples/dodge-the-creeps-2d/rust",
    "examples/timing-test/rust",
    "examples/input-event-demo/rust",
    "examples/platformer-2d/rust",
    "examples/simple-node2d-movement/rust",
    "examples/perf-test/rust",
    "examples/two-way-sync-demo/rust",
    "run_godot_util",
]
resolver = "2"

[workspace.dependencies]
godot = { version = "0.4.4", features = ["experimental-threads"] }
godot-bevy-macros = { version = "0.9.2", path = "godot-bevy-macros" }
godot-bevy-test = { version = "0.9.2", path = "godot-bevy-test" }
godot-bevy-test-macros = { version = "0.9.2", path = "godot-bevy-test-macros" }
