[package]
name = "godot-bevy-inspector"
description = "Runtime inspector for godot-bevy using native Godot UI"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
# Core Bevy sub-crates
bevy_app = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_math = { version = "0.17", default-features = false }

# Godot bindings
godot.workspace = true

# The main godot-bevy crate
godot-bevy = { version = "0.9.2", path = "../godot-bevy" }

# Utilities
tracing = { version = "0.1", default-features = false, features = ["std"] }

[features]
default = []
# Godot API version features
api-4-2 = ["godot/api-4-2", "godot-bevy/api-4-2"]
api-4-3 = ["godot/api-4-3", "godot-bevy/api-4-3"]
api-4-4 = ["godot/api-4-4", "godot-bevy/api-4-4"]
