[package]
name = "godot-bevy-macros"
description = "Procedural macros for godot-bevy integration library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-tracy = { version = "0.11.4", default-features = false, features = [
  "enable",
  "manual-lifetime",
  "ondemand",
  "broadcast",       # announce presence
], optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

[features]
default = ["profiling"]
profiling = [
  # "dep:tracing",
  "dep:tracing-tracy",
  "dep:tracing-subscriber",
  "tracing-tracy/enable",          # actually emit data
  "tracing-tracy/manual-lifetime", # disable the problematic static C‑tors
  "tracing-tracy/ondemand",        # enable the on-demand feature
]
