[package]
name = "godot-bevy-test"
description = "Integration testing framework for godot-bevy projects"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
godot = { workspace = true, features = ["__trace"] }
godot-bevy = { workspace = true }
godot-bevy-test-macros = { workspace = true }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "multi_threaded",
] }
serde_json = "1.0"
chrono = "0.4"
