[package]
name = "godot-bevy"
description = "Bridge between Bevy ECS and Godot 4 for Rust-powered game development"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
# Core Bevy sub-crates (required)
bevy_app = { version = "0.17", default-features = false }
bevy_asset = { version = "0.17", default-features = false }
bevy_diagnostic = { version = "0.17", default-features = false }
bevy_ecs = { version = "0.17", default-features = false, features = ["multi_threaded"] }
bevy_input = { version = "0.17", default-features = false }
bevy_math = { version = "0.17", default-features = false }
bevy_platform = { version = "0.17", default-features = false }
bevy_reflect = { version = "0.17", default-features = false }
bevy_tasks = { version = "0.17", default-features = false, features = ["multi_threaded"] }
bevy_time = { version = "0.17", default-features = false }
bevy_transform = { version = "0.17", default-features = false, features = ["bevy-support"] }

# Optional Bevy sub-crates (feature-gated)
bevy_gilrs = { version = "0.17", default-features = false, optional = true }
bevy_log = { version = "0.17", default-features = false, optional = true }

godot.workspace = true
godot-bevy-macros.workspace = true
thiserror = "2.0.12"
futures-lite = "2.6"
once_cell = "1.21"
parking_lot = "0.12.4"
inventory = "0.3"
paste = "1.0"
chrono = { version = "0.4", optional = true }
tracing = { version = "0.1", default-features = false, features = [
  "std",
  "attributes",
] }
tracing-tracy = { version = "0.11.4", default-features = false, features = [
  "enable",
], optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

[features]
default = ["bevy_gamepad", "godot_bevy_log"]
# Enable Bevy's gamepad support via gilrs
bevy_gamepad = ["dep:bevy_gilrs"]
godot_bevy_log = ["dep:chrono", "dep:bevy_log"]
trace_tracy = ["dep:tracing-tracy", "dep:tracing-subscriber"]
# Godot API version features - matches gdext naming convention
api-4-2 = ["godot/api-4-2"]
api-4-2-1 = ["godot/api-4-2-1"]
api-4-2-2 = ["godot/api-4-2-2"]
api-4-3 = ["godot/api-4-3"]
api-4-4 = ["godot/api-4-4"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
