[package]
authors.workspace = true
categories.workspace = true
description = "Bridge between Bevy ECS and Godot 4 for Rust-powered game development"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "godot-bevy"
repository.workspace = true
version.workspace = true

[dependencies]
# Core Bevy sub-crates (required)
bevy_app = {version = "0.18", default-features = false}
bevy_asset = {version = "0.18", default-features = false}
bevy_diagnostic = {version = "0.18", default-features = false}
bevy_ecs = {version = "0.18", default-features = false, features = ["multi_threaded", "bevy_reflect"]}
bevy_input = {version = "0.18", default-features = false, features = ["gestures", "keyboard", "mouse"]}
bevy_math = {version = "0.18", default-features = false}
bevy_reflect = {version = "0.18", default-features = false}
bevy_tasks = {version = "0.18", default-features = false, features = ["multi_threaded"]}
bevy_time = {version = "0.18", default-features = false}
bevy_transform = {version = "0.18", default-features = false, features = ["bevy-support"]}
bevy_utils = {version = "0.18", default-features = false, features = ["debug"]}

# Optional Bevy sub-crates (feature-gated)
bevy_gilrs = {version = "0.18", default-features = false, optional = true}
bevy_log = {version = "0.18", default-features = false, optional = true}

chrono = {version = "0.4", optional = true}
crossbeam-channel = "0.5"
futures-lite = "2.6"
godot-bevy-macros.workspace = true
godot.workspace = true
inventory = "0.3"
once_cell = "1.21"
parking_lot = "0.12.4"
paste = "1.0"
thiserror = "2.0.12"
tracing = {version = "0.1", default-features = false, features = [
  "std",
  "attributes",
]}
tracing-subscriber = {version = "0.3.19", optional = true}
tracing-tracy = {version = "0.11.4", default-features = false, features = [
  "enable",
], optional = true}

[features]
default = ["bevy_gamepad", "godot_bevy_log", "experimental-threads"]
# Enable Bevy's gamepad support via gilrs
bevy_gamepad = ["dep:bevy_gilrs"]
godot_bevy_log = ["dep:chrono", "dep:bevy_log"]
trace_tracy = ["dep:tracing-tracy", "dep:tracing-subscriber"]
# Enable godot's experimental threading support (default for native builds)
# Note: This is incompatible with experimental-wasm's lazy-function-tables
experimental-threads = ["godot/experimental-threads"]
# Godot API version features - matches gdext naming convention
api-4-2 = ["godot/api-4-2"]
api-4-2-1 = ["godot/api-4-2-1"]
api-4-2-2 = ["godot/api-4-2-2"]
api-4-3 = ["godot/api-4-3"]
api-4-4 = ["godot/api-4-4"]
api-4-5 = ["godot/api-4-5"]
# Web/WASM support (experimental)
# Note: These features intentionally exclude bevy_gamepad, godot_bevy_log,
# and experimental-threads to avoid incompatible dependencies.
# Uses api-custom-json to avoid cross-compilation issues with struct sizes.
experimental-wasm = ["godot/experimental-wasm", "godot/lazy-function-tables", "godot/api-custom-json"]
experimental-wasm-nothreads = ["experimental-wasm", "godot/experimental-wasm-nothreads"]

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
