[package]
name = "godot-bevy-itest"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
# Enable internal/exploratory benchmarks (not tracked in CI)
internal-benchmarks = []

[dependencies]
godot = { workspace = true, features = ["__trace"] }
godot-bevy = { path = "../../godot-bevy" }
godot-bevy-test = { path = "../../godot-bevy-test" }
bevy = { version = "0.17", default-features = false, features = [
  "bevy_asset",
  "multi_threaded",
] }
crossbeam-channel = "0.5"
