[package]
name = "godot-bevy-itest"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "run_godot.rs"
name = "godot_bevy_itest"

[features]
default = []
# Integration tests that register autosync node types. Opt-in so the benchmark
# binary (built without it) keeps an empty AutoSyncBundleRegistry, keeping
# scene-tree node-added numbers comparable to the base branch.
autosync-tests = []

[dependencies]
godot = { workspace = true, features = ["__trace"] }
godot-bevy = { path = "../../godot-bevy" }
godot-bevy-test = { path = "../../godot-bevy-test" }
bevy = { version = "0.18", default-features = false, features = [
  "bevy_asset",
  "multi_threaded",
] }
crossbeam-channel = "0.5"
cargo-godot-lib.workspace = true
