[package]
name = "avian-physics-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "avian_physics_test"

[dependencies]
avian3d = "0.4"
bevy = { version = "0.17", default-features = false, features = [
    "bevy_state",
    "bevy_log",
    "multi_threaded",
] }
bevy_asset_loader = "0.24.0-rc.1"
godot = "0.4"
godot-bevy = { path = "../../../godot-bevy" }
run_godot_util = { path = "../../../run_godot_util" }
which = "8"
