[package]
name = "avian-physics-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "avian_physics_example"

[dependencies]
avian3d = "0.5"
bevy = { version = "0.18", default-features = false, features = [
  "bevy_state",
  "bevy_log",
  "multi_threaded",
] }
bevy_asset_loader = "0.25"
godot = "0.4"
godot-bevy = { path = "../../../godot-bevy" }
cargo-godot-lib.workspace = true

[features]
itest = []
