[package]
name = "rustboids"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "boids-benchmark"

[dependencies]
bevy = "0.16"
bevy_spatial = "0.11.0"
fastrand = "2.3.0"
godot = "0.3"
godot-bevy = { path = "../../../godot-bevy" }
which = "8"
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-tracy = { version = "0.11.4", default-features = false, features = [
  "enable",
  "manual-lifetime",
  "ondemand",
  "broadcast",       # announce presence
], optional = true }
tracing-subscriber = { version = "0.3.19", optional = true }

[features]
profiling = [
  # "dep:tracing",
  "dep:tracing-tracy",
  "dep:tracing-subscriber",
  "godot-bevy/profiling",
  "bevy/trace_tracy",
]
