[package]
# TODO: I'm open to better name suggestions
name = "rust-godot-node-children-as-bevy-components"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "godot-node-children-as-bevy-components"

[dependencies]
godot-bevy = { path = "../../../godot-bevy" }
bevy = { version = "0.16", default-features = false }
godot = "0.3"
which = "7.0.3"
