[package]
name = "input-event-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "input_event_example"

[dependencies]
bevy = { version = "0.17", default-features = false }
fastrand = { version = "2.3.0" }
godot = "0.4"
godot-bevy = { path = "../../../godot-bevy" }
leafwing-input-manager = "0.18.0"
bevy_enhanced_input = "0.19.1"
cargo-godot-lib.workspace = true
