[package]
name = "simple-node2d-movement-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "simple-node2d-movement"

[dependencies]
godot-bevy = { path = "../../../godot-bevy" }
run_godot_util = { path = "../../../run_godot_util" }
bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
godot = "0.4"
which = "7.0.3"
