[package]
name = "simple-node2d-movement-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "simple-node2d-movement"

[dependencies]
godot-bevy = { path = "../../../godot-bevy", default-features = false }
bevy = { version = "0.17", default-features = false }
godot = "0.4"
cargo-godot-lib.workspace = true

[features]
default = ["godot-bevy/default"]
# Web build features - disable problematic dependencies
web = ["godot-bevy/experimental-wasm"]
web-nothreads = ["godot-bevy/experimental-wasm-nothreads"]
