[package]
name = "timing-test"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "timing_test"

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
fastrand = { version = "2.3.0" }
godot = "0.4"
godot-bevy = { path = "../../../godot-bevy" }
cargo-godot-lib.workspace = true

[features]
itest = []
