[package]
name = "two-way-sync-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "two-way-sync-demo"

[dependencies]
godot-bevy = { path = "../../../godot-bevy" }
bevy = { version = "0.17", default-features = false }
godot = "0.4"
which = "8"
