[package]
name = "rust-web-demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
path = "../../run_godot.rs"
name = "web-demo"

[dependencies]
bevy = { version = "0.17", default-features = false }
godot = "0.4"
which = "7.0.3"

# Use godot-bevy without default features - features are controlled via Cargo.toml features
[dependencies.godot-bevy]
path = "../../../godot-bevy"
default-features = false

[features]
# Native builds: use threading (default)
default = ["native"]
native = ["godot-bevy/experimental-threads", "godot-bevy/bevy_gamepad", "godot-bevy/godot_bevy_log"]

# Web build features - use lazy-function-tables instead of experimental-threads
web = ["godot-bevy/experimental-wasm"]
web-nothreads = ["godot-bevy/experimental-wasm-nothreads"]
